src/app/about-me/about-me.component.css
.section-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.section-container fuu-section-card {
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: 44%;
    margin-left: 4%;
}

